@@ -1,4 +1,5 @@
 0.08
+ - Regen examples.
 
 0.07 2024-10-30T22:17:14+01:00
  - API change: Add 'collective' parameter to ISBN.
